fixed my color spacing and will be adding my own logo

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ li {
     flex:1;
 }
 
-.text-purple{
+.text-skyblue{
     color: #87CEFA;
 }
 
@@ -104,7 +104,7 @@ nav {
   height: 100px;
   width: 100%;
   max-width: 1000px;
-  margin: 0 auto;
+  margin: 0 auto 2.5% auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
